--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ default = ["ui"]
 ui = ["bevy/bevy_ui"]
 
 [dependencies]
-bevy = { version = "0.13", default-features = false, features = ["bevy_asset", "bevy_render", "bevy_sprite"] }
+bevy = { version = "0.14", default-features = false, features = ["bevy_asset", "bevy_render", "bevy_sprite"] }
 derive_setters = "0.1.6"
 image = { version = "0.24.9", default-features = false, features = ["png"] }
 ron = "0.8.1"
@@ -23,14 +23,14 @@ serde = { version = "1.0.197", features = ["derive"] }
 thiserror = "1.0.58"
 
 [dev-dependencies]
-bevy = { version = "0.13", default-features = false, features = [
+bevy = { version = "0.14", default-features = false, features = [
   "bevy_asset",
   "bevy_render",
   "bevy_sprite",
   "bevy_core_pipeline",
-  "multi-threaded",
+  "multi_threaded",
   "png",
   "x11",
   "wayland"
 ] }
-bevy_asset_loader = { version = "0.20.0", features = ["2d"] }
+bevy_asset_loader = { version = "0.21.0", features = ["2d"] }
