--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,11 +18,12 @@ default = ["ui"]
 ui = ["bevy/bevy_ui"]
 
 [dependencies]
-bevy = { version = "0.14", default-features = false, features = [
+bevy = { version = "0.15", default-features = false, features = [
     "bevy_asset",
     "bevy_render",
     "bevy_sprite",
 ] }
+bevy_image = "0.15"
 derive_setters = "0.1.6"
 image = { version = "0.24.9", default-features = false, features = ["png"] }
 ron = "0.8.1"
@@ -30,16 +31,17 @@ serde = { version = "1.0.197", features = ["derive"] }
 thiserror = "1.0.58"
 
 [dev-dependencies]
-bevy = { version = "0.14", default-features = false, features = [
+bevy = { version = "0.15", default-features = false, features = [
     "bevy_asset",
     "bevy_render",
     "bevy_sprite",
     "bevy_core_pipeline",
+    "bevy_window",
     "multi_threaded",
     "png",
     "x11",
 ] }
-bevy_asset_loader = { version = "0.21.0", features = ["2d"] }
+bevy_asset_loader = { version = "0.22.0", features = ["2d"] }
 
 [[example]]
 name = "bevy_ui"
