--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,9 +3,9 @@ name = "extol_image_font"
 version = "0.4.0"
 edition = "2021"
 authors = ["Ash <ext0l@catgirl.ai>"]
-categories = [ "game-development" ]
+categories = ["game-development"]
 description = "Render pixel fonts from PNGs in Bevy."
-keywords = [ "gamedev", "bevy" ]
+keywords = ["gamedev", "bevy"]
 license = "MIT OR Apache-2.0"
 repository = "https://github.com/deifactor/extol_image_font"
 
@@ -15,7 +15,11 @@ default = ["ui"]
 ui = ["bevy/bevy_ui"]
 
 [dependencies]
-bevy = { version = "0.14", default-features = false, features = ["bevy_asset", "bevy_render", "bevy_sprite"] }
+bevy = { version = "0.14", default-features = false, features = [
+    "bevy_asset",
+    "bevy_render",
+    "bevy_sprite",
+] }
 derive_setters = "0.1.6"
 image = { version = "0.24.9", default-features = false, features = ["png"] }
 ron = "0.8.1"
@@ -24,14 +28,13 @@ thiserror = "1.0.58"
 
 [dev-dependencies]
 bevy = { version = "0.14", default-features = false, features = [
-  "bevy_asset",
-  "bevy_render",
-  "bevy_sprite",
-  "bevy_core_pipeline",
-  "multi_threaded",
-  "png",
-  "x11",
-  "wayland"
+    "bevy_asset",
+    "bevy_render",
+    "bevy_sprite",
+    "bevy_core_pipeline",
+    "multi_threaded",
+    "png",
+    "x11",
 ] }
 bevy_asset_loader = { version = "0.21.0", features = ["2d"] }
 
