--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,3 +34,7 @@ bevy = { version = "0.14", default-features = false, features = [
   "wayland"
 ] }
 bevy_asset_loader = { version = "0.21.0", features = ["2d"] }
+
+[[example]]
+name = "bevy_ui"
+required-features = ["ui"]
