--- a/.github/workflows/DraftNewRelease.yml
+++ b/.github/workflows/DraftNewRelease.yml
@@ -48,7 +48,7 @@ jobs:
                   git add CHANGELOG.md Cargo.toml
                   git commit --message "chore: prepare release ${{ github.event.inputs.version }}"
 
-                  echo "::set-output name=commit::$(git rev-parse HEAD)"
+                  echo "name=commit::$(git rev-parse HEAD)" >> $GITHUB_OUTPUT
 
             - name: Push new branch
               run: git push origin release/${{ github.event.inputs.version }}
