--- a/.github/workflows/DraftNewRelease.yml
+++ b/.github/workflows/DraftNewRelease.yml
@@ -9,7 +9,7 @@ on:
 
 jobs:
     draft-new-release:
-        name: "Draft a new release"
+        name: "Draft a new release for ${{ github.event.inputs.version }}"
         runs-on: ubuntu-latest
         permissions:
             contents: write
