feat(rendered): add support for rendering text to sprites and UI elements
- Introduced the `rendered` feature to enable text rendering functionality.
- Extracted rendering logic into a new `rendered.rs` module for modularity.
- Updated `Cargo.toml` to make `image` dependency optional and included it under the new `rendered` feature.
- Updated the plugin's system registration to conditionally include rendering systems based on the `rendered` feature.

BREAKING CHANGE: Existing text rendering functionality has been moved under the `rendered` feature. Users must enable this feature to retain previous behavior.

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -69,14 +69,14 @@ jobs:
 
             - name: Cargo test
               id: tests
-              run: cargo hack --feature-powerset --keep-going test --no-fail-fast --workspace
+              run: cargo hack --feature-powerset --keep-going test --no-fail-fast --workspace --exclude-features default
 
             # - name: Cargo test
             #   id: tests
-            #   run: cargo hack --feature-powerset --keep-going test --message-format=json --no-fail-fast --workspace > tests.json
+            #   run: cargo hack --feature-powerset --keep-going test --message-format=json --no-fail-fast --workspace --exclude-features default > tests.json
 
             # - name: Cargo test (with output on failure)
-            #   run: cargo hack --feature-powerset --keep-going test --no-fail-fast --workspace
+            #   run: cargo hack --feature-powerset --keep-going test --no-fail-fast --workspace --exclude-features default
             #   if: failure() && steps.tests.outcome == 'failure'
 
             # - name: Cargo metadata
