--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,9 +13,9 @@ license = "MIT OR Apache-2.0"
 repository = "https://github.com/ilyvion/bevy_image_font"
 
 [features]
-default = ["ui"]
-# Enables support for rendering to UiImage bundles
-ui = ["bevy/bevy_ui"]
+default = ["ui", "rendered"]
+rendered = ["dep:image"]
+ui = ["rendered", "bevy/bevy_ui"]
 
 [dependencies]
 bevy = { version = "0.15", default-features = false, features = [
@@ -25,10 +25,15 @@ bevy = { version = "0.15", default-features = false, features = [
 ] }
 bevy_image = "0.15"
 derive_setters = "0.1.6"
-image = { version = "0.24.9", default-features = false, features = ["png"] }
 ron = "0.8.1"
 serde = { version = "1.0.197", features = ["derive"] }
 thiserror = "1.0.58"
+
+[dependencies.image]
+version = "0.24.9"
+default-features = false
+features = ["png"]
+optional = true
 
 [dev-dependencies]
 bevy = { version = "0.15", default-features = false, features = [
@@ -45,4 +50,8 @@ bevy_asset_loader = { version = "0.22.0", features = ["2d"] }
 
 [[example]]
 name = "bevy_ui"
-required-features = ["ui"]
+required-features = ["rendered", "ui"]
+
+[[example]]
+name = "sprite"
+required-features = ["rendered"]
