--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ repository = "https://github.com/ilyvion/bevy_image_font"
 default = ["ui", "rendered"]
 rendered = ["dep:image"]
 ui = ["rendered", "bevy/bevy_ui"]
+#gizmos = ["bevy/bevy_gizmos"]
 
 [dependencies]
 bevy = { version = "0.15", default-features = false, features = [
@@ -55,3 +56,7 @@ required-features = ["rendered", "ui"]
 [[example]]
 name = "sprite"
 required-features = ["rendered"]
+
+[lints.clippy]
+pedantic = { level = "warn", priority = -1 }
+needless_pass_by_value = "allow"
