chore(docs): improve documentation generation on docs.rs
- Added configuration to `Cargo.toml` to enable documentation for all features on `docs.rs`.
- Introduced `rustdoc-args` in `Cargo.toml` to define the `docsrs` configuration attribute.
- Updated the library to conditionally enable the `doc_cfg` and `doc_auto_cfg` features when building with `docsrs`.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -64,3 +64,9 @@ required-features = ["atlas_sprites"]
 [lints.clippy]
 pedantic = { level = "warn", priority = -1 }
 needless_pass_by_value = "allow"
+
+[package.metadata.docs.rs]
+# document all features
+all-features = true
+# defines the configuration attribute `docsrs`
+rustdoc-args = ["--cfg", "docsrs"]
