feat(atlas_sprites): improved sprite management
- Improved sprite management by introducing `ImageFontTextData` to track character-sprite relationships.
- Enhanced `set_up_sprites` to efficiently handle sprite updates, additions, and removals for `ImageFontSpriteText`.
- Introduced animated text rendering in `atlased_sprite.rs` using `AnimateText` and `AnimateColor` components.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -115,6 +115,7 @@ variant_size_differences = "warn"
 [lints.clippy]
 pedantic = { level = "warn", priority = -1 }
 needless_pass_by_value = "allow"
+type_complexity = "allow"
 
 [package.metadata.docs.rs]
 # document all features
