feat(loader): add validation and use `Utf8PathBuf`
- Switched from `PathBuf` to `Utf8PathBuf` in `ImageFontSettings` for stricter path validation and better Unicode support.
- Added a `validate` method to `ImageFontSettings` to check for empty paths and layout strings, improving error handling.
- Extended `ImageFontLoadError` with `EmptyImagePath` and `EmptyLayoutString` variants for error reporting.
- Updated the `ImageFontLoader` to validate settings during font loading and improved error messages for invalid paths.
- Added `camino` crate dependency with `serde1` feature for enhanced path handling.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ bevy = { version = "0.15", default-features = false, features = [
     "bevy_sprite",
 ] }
 bevy_image = "0.15"
+camino = { version = "1.1.9", features = ["serde1"] }
 derive_setters = "0.1.6"
 ron = "0.8.1"
 serde = { version = "1.0.197", features = ["derive"] }
