ci(docs): enable `rustdoc-scrape-examples` for improved documentation integration
- Updated CI workflow to build documentation with `-Zrustdoc-scrape-examples` for extracting examples from source code.
- Enabled `doc-scrape-examples` in examples (`rendered_ui`, `rendered_sprite`, `atlased_sprite`) in `Cargo.toml`.
- Added `cargo-args` with `-Zunstable-options` and `-Zrustdoc-scrape-examples` to the documentation configuration in `Cargo.toml`.

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -184,7 +184,7 @@ jobs:
               uses: Leafwing-Studios/cargo-cache@v2
 
             - name: Build documentation
-              run: cargo doc --verbose --no-deps --all-features --workspace
+              run: cargo doc -Zunstable-options -Zrustdoc-scrape-examples --no-deps --all-features --workspace
               env:
                   RUSTDOCFLAGS: --cfg docsrs
 
