--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -49,6 +49,17 @@ jobs:
         permissions:
             checks: write
         steps:
+            - name: Free disk space
+              if: matrix.os == 'ubuntu-latest'
+              run: |
+                  df -h
+                  sudo swapoff -a
+                  sudo rm -f /swapfile
+                  sudo apt clean
+                  docker rmi $(docker image ls -aq)
+                  sudo rm -rf /usr/share/dotnet /usr/local/lib/android /opt/ghc
+                  df -h
+
             - name: Checkout source code
               uses: actions/checkout@v4
               with:
