ci: enhance Clippy checks with `cargo-hack` and feature powersets
- Updated CI workflow to use `cargo-hack` for Clippy checks across all feature combinations:
  - Replaced `cargo clippy --all-features` with `cargo hack --feature-powerset clippy`.
  - Ensures comprehensive linting by testing all possible feature combinations.

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -149,11 +149,16 @@ jobs:
             - name: Cache the Cargo build files
               uses: Leafwing-Studios/cargo-cache@v2
 
+            - name: Install cargo-hack
+              uses: taiki-e/install-action@v2
+              with:
+                  tool: cargo-hack
+
             - name: Run cargo fmt
               run: cargo fmt --all -- --check
 
             - name: Run cargo clippy
-              run: cargo clippy --all-features
+              run: cargo hack --feature-powerset clippy --all-targets --exclude-features default -- -D warnings
 
     coverage:
         name: Report coverage
