--- a/Cargo.toml
+++ b/Cargo.toml
@@ -57,6 +57,11 @@ bevy = { version = "0.15", default-features = false, features = [
     "x11",
 ] }
 bevy_asset_loader = { version = "0.22.0", features = ["2d"] }
+tokio = { version = "1.42.0", default-features = false, features = [
+    "macros",
+    "rt",
+] }
+
 
 [[example]]
 name = "rendered_ui"
