--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -59,7 +59,7 @@ jobs:
                   sudo swapoff -a
                   sudo rm -f /swapfile
                   sudo apt clean
-                  docker rmi $(docker image ls -aq)
+                  docker rmi $(docker image ls -aq) || true
                   sudo rm -rf /usr/share/dotnet /usr/local/lib/android /opt/ghc
                   df -h
 
