--- a/.github/workflows/DraftNewRelease.yml
+++ b/.github/workflows/DraftNewRelease.yml
@@ -42,6 +42,11 @@ jobs:
             - name: Bump version in Cargo.toml
               run: cargo bump ${{ github.event.inputs.version }}
 
+            - name: Check we haven't violated semver
+              uses: obi1kenobi/cargo-semver-checks-action@v2
+              with:
+                  verbose: true
+
             - name: Commit changelog and manifest files
               id: make-commit
               run: |
