test: restore `image_font_plugin_initialization` functionality
- Added `LogPlugin` to `image_font_plugin_initialization` test for diagnosing test failures.
- Added `ImageLoader` and initialized `TextureAtlasLayout` and `Image` assets to enable asset loading during the test.
- Reactivated the `image_font_plugin_initialization` test by removing the `#[ignore]` attribute and ensuring the test environment supports its requirements.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,8 @@ fnt = []
 gizmos = ["bevy/bevy_gizmos"]
 rendered = ["dep:image"]
 ui = ["rendered", "bevy/bevy_ui"]
+# only here until I can find a better solution
+DO_NOT_USE_internal_tests_disable_gizmos = []
 
 [dependencies]
 bevy = { version = "0.15", default-features = false, features = [
