Basic support for loading fonts from `.fnt` files

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,8 +20,9 @@ rustdoc-args = ["--cfg", "docsrs"]
 cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
 
 [features]
-default = ["ui", "rendered", "atlas_sprites"]
+default = ["ui", "rendered", "atlas_sprites", "fnt"]
 atlas_sprites = []
+fnt = []
 gizmos = ["bevy/bevy_gizmos"]
 rendered = ["dep:image"]
 ui = ["rendered", "bevy/bevy_ui"]
