refactor: modularize `atlas_sprites.rs` into sub-modules with robust tests
- Refactored `atlas_sprites.rs` into the following sub-modules:
  - `scaling_mode.rs`: Manages glyph scaling with `ScalingMode`.
  - `letter_spacing.rs`: Handles text spacing with `LetterSpacing`.
  - `anchors.rs`: Centralizes anchor-related calculations and offsets.
  - `render_context.rs`: Encapsulates rendering logic for text transformations and updates.
- Enhanced tests:
  - Unit tests for each sub-module to validate scaling, spacing, anchors, and rendering operations.
  - Edge case tests for empty and large text blocks.
- Refactored `tests.rs`:
  - Centralized app initialization into `utils.rs` with helpers (`initialize_app_with_example_font`).
  - Introduced `RenderContextTester` for streamlined rendering context tests.
- Improved feature-based test configurations (e.g., `gizmos`).

This refactor improves code organization, ensures functional consistency, and enhances test coverage.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -60,6 +60,7 @@ bevy = { version = "0.15", default-features = false, features = [
     "x11",
 ] }
 bevy_asset_loader = { version = "0.22.0", features = ["2d"] }
+float_eq = "1.0.1"
 tokio = { version = "1.42.0", default-features = false, features = [
     "macros",
     "rt",
