--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -30,7 +30,7 @@ jobs:
             - name: Cache the Cargo build files
               uses: Leafwing-Studios/cargo-cache@v2
               with:
-                  cache-group: ubuntu-latest-stable
+                  cache-group: check
                   save-if: ${{ github.event_name != 'pull_request' }}
 
             - name: Cargo check
@@ -80,8 +80,8 @@ jobs:
               if: github.event_name != 'pull_request'
               uses: Leafwing-Studios/cargo-cache@v2
               with:
-                  cache-group: ${{ matrix.os }}-${{ matrix.toolchain }}
-                  save-if: ${{ github.event_name != 'pull_request' && matrix.toolchain == 'stable' }}
+                  cache-group: test-${{ matrix.os }}-${{ matrix.toolchain }}
+                  save-if: ${{ github.event_name != 'pull_request' }}
 
             - name: Install cargo-hack
               uses: taiki-e/install-action@v2
@@ -131,7 +131,7 @@ jobs:
             - name: Cache the Cargo build files
               uses: Leafwing-Studios/cargo-cache@v2
               with:
-                  cache-group: ubuntu-latest-stable
+                  cache-group: check
                   save-if: ${{ github.event_name != 'pull_request' }}
 
             - name: Install cargo-hack
@@ -148,7 +148,7 @@ jobs:
     coverage:
         name: Report coverage
         runs-on: ubuntu-latest
-        needs: test
+        needs: [style, docs, test]
         if: github.event_name != 'pull_request'
         container:
             image: xd009642/tarpaulin:develop-nightly
@@ -157,6 +157,11 @@ jobs:
         steps:
             - name: Checkout repository
               uses: actions/checkout@v4
+
+            - name: Cache the Cargo build files
+              uses: Leafwing-Studios/cargo-cache@v2
+              with:
+                  cache-group: check
 
             - name: Generate code coverage
               run: |
@@ -187,7 +192,7 @@ jobs:
             - name: Cache the Cargo build files
               uses: Leafwing-Studios/cargo-cache@v2
               with:
-                  cache-group: ubuntu-latest-nightly
+                  cache-group: documentation
 
             - name: Build documentation
               run: cargo doc -Zunstable-options -Zrustdoc-scrape-examples --no-deps --all-features --workspace
