--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -55,6 +55,7 @@ jobs:
         permissions:
             checks: write
         steps:
+            # The fact that we even have to do this is absurd.
             - name: Free disk space
               if: matrix.os == 'ubuntu-latest'
               run: |
@@ -63,7 +64,20 @@ jobs:
                   sudo rm -f /swapfile
                   sudo apt clean
                   docker rmi $(docker image ls -aq) || true
-                  sudo rm -rf /usr/share/dotnet /usr/local/lib/android /opt/ghc
+                  sudo rm -rf \
+                    "$AGENT_TOOLSDIRECTORY" \
+                    /opt/google/chrome \
+                    /opt/microsoft/msedge \
+                    /opt/microsoft/powershell \
+                    /opt/pipx \
+                    /usr/lib/mono \
+                    /usr/local/julia* \
+                    /usr/local/lib/android \
+                    /usr/local/lib/node_modules \
+                    /usr/local/share/chromium \
+                    /usr/local/share/powershell \
+                    /usr/share/dotnet \
+                    /usr/share/swift
                   df -h
 
             - name: Checkout source code
