feat: add BMF example and improve font asset naming
- Added `examples/bmf.rs`:
  - Tests and demonstrates how to render bitmap fonts (`txt.fnt`, `xml.fnt`, `bin.fnt`).
  - Uses multilingual pangrams to test font rendering across different scripts.
- Added multilingual pangrams to `common/mod.rs`:
  - Includes Latin, Cyrillic, Greek, Hebrew, Arabic, and Armenian text samples.
- Renamed asset handles for clarity:
  - `image_font` → `example`
  - `variable_width_image_font` → `variable_width`
- Updated examples (`atlased_sprite.rs`, `rendered_sprite.rs`, `rendered_ui.rs`):

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,7 +36,7 @@ bevy = { version = "0.15", default-features = false, features = [
     "bevy_sprite",
 ] }
 bevy_image = "0.15"
-bmfont_rs = { version = "0.2.0", features = ["xml"] }
+bmfont_rs = { version = "0.2.1", features = ["xml"] }
 camino = { version = "1.1.9", features = ["serde1"] }
 derive_setters = "0.1.6"
 ron = "0.8.1"
@@ -80,6 +80,11 @@ doc-scrape-examples = true
 
 [[example]]
 name = "atlased_sprite"
+required-features = ["atlas_sprites"]
+doc-scrape-examples = true
+
+[[example]]
+name = "bmf"
 required-features = ["atlas_sprites"]
 doc-scrape-examples = true
 
