--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,6 +41,7 @@ camino = { version = "1.1.9", features = ["serde1"] }
 derive_setters = "0.1.6"
 ron = "0.8.1"
 serde = { version = "1.0.197", features = ["derive"] }
+strum = { version = "0.26.3", features = ["derive"] }
 thiserror = "2.0.11"
 
 [dependencies.image]
