test: add `visual-acceptance-testing.rs` integration test
- Introduced `visual-acceptance-testing.rs`:
  - Renders known test scenes to an image.
  - Compares rendered output against reference images.
  - Fails if rendering changes occur.

This test ensures that future changes do not unintentionally alter how the library renders images.

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -14,13 +14,14 @@ on:
 
 env:
     CARGO_TERM_COLOR: always
+    RUSTFLAGS: "--cfg ci"
 
 jobs:
     check:
         name: Check
         runs-on: ubuntu-latest
         env:
-            RUSTFLAGS: -Dwarnings
+            RUSTFLAGS: "-Dwarnings --cfg ci"
             RUST_BACKTRACE: 1
         steps:
             - uses: actions/checkout@v4
