--- a/Cargo.toml
+++ b/Cargo.toml
@@ -60,12 +60,15 @@ bevy = { version = "0.15", default-features = false, features = [
     "x11",
 ] }
 bevy_asset_loader = { version = "0.22.0", features = ["2d"] }
+crossbeam-channel = "0.5.14"
 float_eq = "1.0.1"
+itertools = "0.14"
+oxipng = "9.1.3"
+paste = "1.0.15"
 tokio = { version = "1.42.0", default-features = false, features = [
     "macros",
     "rt",
 ] }
-
 
 [[example]]
 name = "rendered_ui"
@@ -86,6 +89,10 @@ doc-scrape-examples = true
 name = "bmf"
 required-features = ["atlas_sprites"]
 doc-scrape-examples = true
+
+[[test]]
+name = "visual-acceptance-testing"
+required-features = ["ui", "rendered", "atlas_sprites", "bmf"]
 
 [lints.rust]
 absolute_paths_not_starting_with_crate = "warn"
@@ -122,7 +129,7 @@ single_use_lifetimes = "warn"
 #tail_expr_drop_order = "warn"
 trivial_casts = "warn"
 trivial_numeric_casts = "warn"
-unexpected_cfgs = "deny"
+unexpected_cfgs = { level = "deny", check-cfg = ['cfg(ci)'] }
 unit_bindings = "warn"
 unnameable_types = "warn"
 unreachable_pub = "warn"
